gcc/testsuite/gdc.test/compilable/test13902.d
// REQUIRED_ARGS: -o-
// PERMUTE_ARGS:

void foo()
{
    int a;
    int* bar() { return &a; }
}
