gcc/testsuite/gdc.test/fail_compilation/fail9301.d
/*
REQUIRED_ARGS: -o-
PERMUTE_ARGS:
*/

void main()
{
    __vector(void[16]) x = 0x0;
}
